style.css
* {
  box-sizing: border-box;
}

html,
body,
input,
list-view {
  font-family: 'Raleway', sans-serif;
  color: #525454;
  height: 100%;
  margin: 0;
  padding: 0;
}

#map {
  bottom:0px;
  height: 100%;
  left: 0px;
  position: absolute;
  right: 0px;
/*   z-index: -2; */
}

#errorDiv {
  padding-top: 50%;
  text-align: center;
  /*margin: auto;*/
  color: #f0560b;
  /*older browsers will stick with the PNG that they understand, while newer browsers will load the SVG:*/
  background: url("images/noMap.png") no-repeat center;
  background-image: url("images/noMap.svg");
  background-size: contain;
}

input {
  /*position: fixed;*/
  left: 20px;
  top: 10%;
  height: 40px;
  width: 80%;
  font-size: 15px;
  /*z-index: 1000;*/
}

#list-view {
  /*position: fixed;*/
  top: 20px;
  right: 20px;
  width: 100%;
  background-color: #fff;
  margin: 0;
  padding: 0;
  z-index: 1000;
}

h1 {
  font-size: 30px;
  margin: 0 0 10px 0;
  text-align: center;
    font-family: 'Poiret One', cursive;
}

h2 {
  padding: 10px;
  /*text-align: center;*/
}

li {
  margin-left: 20px;
  padding: 2px 0;
  font: 12px sans-serif;
}

#toggleList {
visibility: visible;
/*position: fixed;*/
z-index: 1;
}
/* On small screens, set height to 'auto' for sidenav and grid */
@media screen and (max-width: 300px) {
  #toggleList {
  visibility: visible;
  /*position: fixed;*/
  z-index: 1;
  }
}


#wrapper {
    display: table-row;
    padding-left: 0;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
    background: 000;
}

#wrapper.toggled {
    padding-left: 250px;
}

#sidebar-wrapper {
    display:table-cell;
    position: fixed;
    z-index: 1000;
    left: 250px;
    width: 0;
    height: 100%;
    margin-left: -250px;
    overflow-y: auto;
    background: #fff;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#wrapper.toggled #sidebar-wrapper {
    width: 250px;
}

#page-content-wrapper {
    display:table-cell;
    width: 100%;
    position: relative;
    padding: 15px;
}

#wrapper.toggled #page-content-wrapper {
    position: absolute;
    margin-right: -250px;
}

/* Sidebar Styles */

.sidebar-nav {
    /*position: absolute;*/
    top: 0;
    width: 250px;
    margin: 0;
    padding: 0;
    list-style: none;
}

.sidebar-nav li {
    text-indent: 20px;
    line-height: 40px;
}

.sidebar-nav li a {
    display: block;
    text-decoration: none;
    color: #999999;
}

.sidebar-nav li a:hover {
    text-decoration: none;
    color: #fff;
    background: rgba(255,255,255,0.2);
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
    text-decoration: none;
}

.sidebar-nav > .sidebar-brand {
    height: 65px;
    font-size: 18px;
    line-height: 60px;
}

.sidebar-nav > .sidebar-brand a {
    color: #999999;
}

.sidebar-nav > .sidebar-brand a:hover {
    color: #fff;
    background: none;
}

#markerLayer img {
  animation: pulse .5s infinite alternate;
  -webkit-animation: pulse .5s infinite alternate;
  transform-origin: center;
  -webkit-transform-origin: center;
}

@media(min-width:768px) {
    #wrapper {
        padding-left: 250px;
    }

    #wrapper.toggled {
        padding-left: 0;
    }

    #sidebar-wrapper {
        width: 250px;
    }

    #wrapper.toggled #sidebar-wrapper {
        width: 0;
    }

    #page-content-wrapper {
        padding: 20px;
        position: relative;
    }

    #wrapper.toggled #page-content-wrapper {
        position: relative;
        margin-right: 0;
    }
}

